--- a/css/order.css
+++ b/css/order.css
@@ -12,6 +12,7 @@
   background: #FFFFFF;
   border-radius: 12px;
   padding: 16px 10px;
+  z-index: 10;
 }
 
 .order__wrap-title {
@@ -19,6 +20,11 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 8px;
+  cursor: pointer;
+}
+
+.order__wrap-title .order__title:hover {
+  color: #ffab08;
 }
 
 .order__title {
@@ -123,6 +129,7 @@
 .order__submit:disabled {
   background-color: #F9F9F9;
   color: #ACACAC;
+  cursor: no-drop;
 }
 
 .order__appeal {
@@ -165,10 +172,15 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 12px;
+    cursor: default;
   }
 
   .order__title {
     font-size: 24px;
+  }
+
+  .order__wrap-title .order__title:hover {
+    color: inherit;
   }
 
   .order__count {
